# screenie

./: .gitignore  LICENSE  README.md  TODO  config.py  create_config_file.sh  db.py  exp_llama3-3.toml  init_db.sql  llm.py  main.py  makefile  project_summary.md  pyproject.toml  reader.py  requirements.txt  schema.sql  scopus.bib  screenie_printer.py
bibfiles_for_test/: RIS_ScienceDirect.ris  ScienceDirect.bib  TEXT_ScienceDirect.txt
prompt_templates/: review_prompt.md
screenie/: .reader.py.swp  __init__.py  cli.py  config.py  db.py  llm.py  prompts.py  reader.py  recipes.py  schema.sql  screenie_printer.py  studies.py
tests/: .test_reader.py.swp  test_llm.py  test_reader.py  test_recipes.py  test_studies.py
