[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screenie"
version = "0.1.0"
description = "LLM-assisted systematic review screening tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Facundo Decunta", email = "fdecunta@agro.uba.ar"}
]
keywords = ["llm", "systematic-review", "screening", "research", "meta-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "bibtexparser>=1.4.0",
    "PyYAML>=6.0",
    "litellm>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
]

[project.scripts]
screenie = "screenie.main:cli"

[project.urls]
Homepage = "https://github.com/fdecunta/screenie"
Repository = "https://github.com/fdecunta/screenie"
Issues = "https://github.com/fdecunta/screenie/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["screenie*"]

[tool.setuptools.package-data]
screenie = ["schema.sql"]
